Added last updated dates for projects and site

--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
                               <span class="tag github">GitHub</span>
                               <span class="tag visual-studio-2022">Visual Studio 2022</span>
                            </div>
+                           <br>Last Updated: <span class="project" data-repo="IceMan-Project">Loading...</span>
                            </p>
                            <a href="https://github.com/BabikerBabiker/IceMan-Project" title="IceMan Repository" class="details-link">
                            <i class="bi bi-link-45deg"></i>
@@ -183,6 +184,7 @@
                               <span class="tag github">GitHub</span>
                               <span class="tag vscode">VS Code</span>
                            </div>
+                           <br>Last Updated: <span class="project" data-repo="FinanceFirst">Loading...</span>
                            </p>
                            <a href="https://github.com/BabikerBabiker/FinanceFirst" title="FinanceFirst Repository" class="details-link">
                            <i class="bi bi-link-45deg"></i>
@@ -202,6 +204,7 @@
                               <span class="tag github">GitHub</span>
                               <span class="tag vscode">VS Code</span>
                            </div>
+                           <br>Last Updated: <span class="project" data-repo="Currency-X-Change">Loading...</span>
                            </p>
                            <a href="https://github.com/BabikerBabiker/Currency-X-Change" title="Currency X Change Repository" class="details-link">
                            <i class="bi bi-link-45deg"></i>
@@ -223,8 +226,9 @@
                               <span class="tag github">GitHub</span>
                               <span class="tag vscode">VS Code</span>
                            </div>
+                           <br>Last Updated: <span class="project" data-repo="ai-chatbot">Loading...</span>
                            </p>
-                           <a href="https://github.com/BabikerBabiker/v2" title="v2 Portfolio Repository" class="details-link">
+                           <a href="https://github.com/BabikerBabiker/ai-chatbot" title="AI Chatbot Repository" class="details-link">
                            <i class="bi bi-link-45deg"></i>
                            </a>
                         </div>
@@ -244,6 +248,7 @@
                               <span class="tag vscode">VS Code</span>
                               <span class="tag vercel">Vercel</span>
                            </div>
+                           <br>Last Updated: <span class="project" data-repo="Pantry-App">Loading...</span>
                            </p>
                            <a href="https://github.com/BabikerBabiker/Pantry-App" title="Pantry App Repository" class="details-link">
                            <i class="bi bi-link-45deg"></i>
@@ -264,6 +269,7 @@
                               <span class="tag github">GitHub</span>
                               <span class="tag vscode">VS Code</span>
                            </div>
+                           <br>Last Updated: <span class="project" data-repo="ClearCast">Loading...</span>
                            </p>
                            <a href="https://github.com/BabikerBabiker/ClearCast" title="ClearCast Repository" class="details-link">
                            <i class="bi bi-link-45deg"></i>
@@ -283,6 +289,7 @@
                               <span class="tag github">GitHub</span>
                               <span class="tag visual-studio-2022">Visual Studio 2022</span>
                            </div>
+                           <br>Last Updated: <span class="project" data-repo="validcpp">Loading...</span>
                            </p>
                            <a href="https://github.com/babikerbabiker/validcpp" title="ValidCPP Repository" class="details-link">
                            <i class="bi bi-link-45deg"></i>
@@ -303,6 +310,7 @@
                               <span class="tag github">GitHub</span>
                               <span class="tag visual-studio-2022">Visual Studio 2022</span>
                            </div>
+                           <br>Last Updated: <span class="project" data-repo="MartianDB">Loading...</span>
                            </p>
                            <a href="https://github.com/BabikerBabiker/MartianDB" title="Martian Database Repository" class="details-link">
                            <i class="bi bi-link-45deg"></i>
@@ -323,6 +331,7 @@
                               <span class="tag github">GitHub</span>
                               <span class="tag visual-studio-2022">Visual Studio 2022</span>
                            </div>
+                           <br>Last Updated: <span class="project" data-repo="WordShuffle">Loading...</span>
                            </p>
                            <a href="https://github.com/BabikerBabiker/WordShuffle" title="WordShuffle Repository" class="details-link">
                            <i class="bi bi-link-45deg"></i>
@@ -343,6 +352,7 @@
                               <span class="tag github">GitHub</span>
                               <span class="tag vscode">VS Code</span>
                            </div>
+                           <br>Last Updated: <span class="project" data-repo="InstaInsight">Loading...</span>
                            </p>
                            <a href="https://github.com/BabikerBabiker/InstaInsight" title="InstaInsight Repository" class="details-link">
                            <i class="bi bi-link-45deg"></i>
@@ -363,6 +373,7 @@
                               <span class="tag github">GitHub</span>
                               <span class="tag vscode">VS Code</span>
                            </div>
+                           <br>Last Updated: <span class="project" data-repo="v2">Loading...</span>
                            </p>
                            <a href="https://github.com/BabikerBabiker/v2" title="v2 Portfolio Repository" class="details-link">
                            <i class="bi bi-link-45deg"></i>
@@ -383,6 +394,7 @@
                               <span class="tag github">GitHub</span>
                               <span class="tag vscode">VS Code</span>
                            </div>
+                           <br>Last Updated: <span class="project" data-repo="v1">Loading...</span>
                            </p>
                            <a href="https://github.com/BabikerBabiker/v1" title="v1 Portfolio Repository" class="details-link">
                            <i class="bi bi-link-45deg"></i>
@@ -402,6 +414,7 @@
                               <span class="tag github">GitHub</span>
                               <span class="tag visual-studio-2022">Visual Studio 2022</span>
                            </div>
+                           <br>Last Updated: <span class="project" data-repo="GuessQuest">Loading...</span>
                            </p>
                            <a href="https://github.com/BabikerBabiker/GuessQuest" title="GuessQuest Repository" class="details-link">
                            <i class="bi bi-link-45deg"></i>
@@ -421,6 +434,7 @@
                               <span class="tag github">GitHub</span>
                               <span class="tag vscode">VS Code</span>
                            </div>
+                           <br>Last Updated: <span class="project" data-repo="Rainfall-Calculator">Loading...</span>
                            </p>
                            <a href="https://github.com/BabikerBabiker/Rainfall-Calculator" title="Rainfall Calculator Repository" class="details-link">
                            <i class="bi bi-link-45deg"></i>
@@ -529,7 +543,7 @@
                   <strong class="px-1 sitename">Babiker Babiker</strong>
                   <span>All Rights Reserved</span>
                   <br>v3. Portfolio
-                  <br>Last Updated: <span id="last-updated">Loading...</span>
+                  <br>Last Updated: <div class="last-updated" data-repo="babikerbabiker.github.io">Loading...</div>
                </p>
             </div>
             <div class="social-links d-flex justify-content-center">
