added latest filter

--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
                <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
                   <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
                      <li data-filter="*" class="filter-active">All</li>
+                     <li data-filter=".filter-latest">Latest</li>
                      <li data-filter=".filter-cpp">C++</li>
                      <li data-filter=".filter-java">Java</li>
                      <li data-filter=".filter-python">Python</li>
@@ -172,10 +173,10 @@
                      </div>
                      <!-- End Portfolio Item -->
                      <!-- Portfolio Item -->
-                     <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-cpp filter-gui filter-db">
+                     <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-cpp filter-gui filter-db filter-latest">
                         <img src="assets/img/FinanceFirst.png" class="img-fluid project-image" alt="FinanceFirst">
                         <div class="portfolio-info">
-                           <h4>FinanceFirst (Current)</h4>
+                           <h4>FinanceFirst</h4>
                            <p>Banking app which allows for deposits, withdraws, and transferring of money. Uses an SQLite 3 database to effectively & securely store data.
                            <div class="tags">
                               <span class="tag cplusplus">C++</span>
@@ -213,7 +214,7 @@
                      </div>
                      <!-- End Portfolio Item -->
                      <!-- Portfolio Item -->
-                     <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-web filter-gui filter-ai">
+                     <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-web filter-gui filter-ai filter-latest">
                         <img src="assets/img/aichat.png" class="img-fluid project-image" alt="AI Chatbot">
                         <div class="portfolio-info">
                            <h4>AI Chatbot</h4>
@@ -235,7 +236,7 @@
                      </div>
                      <!-- End Portfolio Item -->
                      <!-- Portfolio Item -->
-                     <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-web filter-gui filter-db">
+                     <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-web filter-gui filter-db filter-latest">
                         <img src="assets/img/PantryApp.jpg" class="img-fluid project-image" alt="Pantry App">
                         <div class="portfolio-info">
                            <h4>Pantry App</h4>
@@ -340,7 +341,7 @@
                      </div>
                      <!-- End Portfolio Item -->
                      <!-- Portfolio Item -->
-                     <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-python filter-gui">
+                     <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-python filter-gui filter-latest">
                         <img src="assets/img/InstaInsight.jpg" class="img-fluid project-image" alt="InstaInsight">
                         <div class="portfolio-info">
                            <h4>InstaInsight</h4>
