--- a/index.html
+++ b/index.html
@@ -243,8 +243,8 @@
                            <p>An intuitive application designed to manage and track your food inventory with ease, featuring item addition, removal, and detailed sorting and search functionalities. <a href="https://bbabiker.com/pantry"> View it here</a>.
                            <div class="tags">
                               <span class="tag nextjs">Next.js</span>
-                              <span class="tag firebase">Firebase</span>
                               <span class="tag materialui">Material UI</span>
+                              <span class="tag firebase">Firebase</span>
                               <span class="tag github">GitHub</span>
                               <span class="tag vscode">VS Code</span>
                               <span class="tag vercel">Vercel</span>
@@ -329,6 +329,7 @@
                               <span class="tag cplusplus">C++</span>
                               <span class="tag file-io">File: I/O</span>
                               <span class="tag sorting">Sorting</span>
+                              <br>
                               <span class="tag github">GitHub</span>
                               <span class="tag visual-studio-2022">Visual Studio 2022</span>
                            </div>
@@ -345,7 +346,7 @@
                         <img src="assets/img/InstaInsight.jpg" class="img-fluid project-image" alt="InstaInsight">
                         <div class="portfolio-info">
                            <h4>InstaInsight</h4>
-                           <p>Python script that logs into Instagram using credentials from a file, checks for users followers and users following, and identifies users who follow you but you don't follow back, utilizing the Instaloader library. Displayed via a simple UI.
+                           <p>Script using Instaloader to log into Instagram with credentials, check followers and followings, identify users who you follow but don't follow you back, and display results via a simple UI.
                            <div class="tags">
                               <span class="tag python">Python</span>
                               <span class="tag file-io">File: I/O</span>
@@ -371,6 +372,7 @@
                               <span class="tag html">HTML</span>
                               <span class="tag css">CSS</span>
                               <span class="tag js">JavaScript</span>
+                              <br>
                               <span class="tag github">GitHub</span>
                               <span class="tag vscode">VS Code</span>
                            </div>
@@ -392,6 +394,7 @@
                               <span class="tag html">HTML</span>
                               <span class="tag css">CSS</span>
                               <span class="tag js">JavaScript</span>
+                              <br>
                               <span class="tag github">GitHub</span>
                               <span class="tag vscode">VS Code</span>
                            </div>
@@ -433,6 +436,7 @@
                               <span class="tag java">Java</span>
                               <span class="tag sorting">Sorting</span>
                               <span class="tag github">GitHub</span>
+                              <br>
                               <span class="tag vscode">VS Code</span>
                            </div>
                            <br>Last Updated: <span class="project" data-repo="Rainfall-Calculator">Loading...</span>
