--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                      <div class="portfolio-info">
                         <h4>CardCrush</h4>
                         <p>AI flashcard generator that allows users to easily create, save, and view generated
-                           flashcards. Premium subscription available as well as a simple basic subscription. <a
+                           flashcards. Subscription based software. <a
                               href="https://cardcrush.bbabiker.com" title="CardCrush Demo">Live View</a>.
                         <div class="tags">
                            <span class="tag nextjs">Next.js</span>
