--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                         <h4>AI Chatbot</h4>
                         <p>AI Chatbot application collaberated on in a group of 4. Includes responsive chat interface
                            using Gemini, by google, to power and respond back to the user.<a
-                              href="https://bbabiker.com/chat" title="AI Chatbot"> View it here</a>.
+                              href="https://chat.bbabiker.com" title="AI Chatbot"> View it here</a>.
                         <div class="tags">
                            <span class="tag nextjs">Next.js</span>
                            <span class="tag react">React.js</span>
@@ -294,7 +294,7 @@
                         <h4>Pantry App</h4>
                         <p>An intuitive application designed to manage and track your food inventory with ease,
                            featuring item addition, removal, and detailed sorting and search functionalities. <a
-                              href="https://bbabiker.com/pantry"> View it here</a>.
+                              href="https://pantry.bbabiker.com"> View it here</a>.
                         <div class="tags">
                            <span class="tag nextjs">Next.js</span>
                            <span class="tag materialui">Material UI</span>
