--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
                      <div class="portfolio-info">
                         <h4>CardCrush</h4>
                         <p>AI flashcard generator that allows users to easily create, save, and view generated
-                           flashcards. Subscription based software. <a
-                              href="https://cardcrush.bbabiker.com" title="CardCrush Demo">Live View</a>.
+                           flashcards. Subscription based software. <a href="https://cardcrush.bbabiker.com"
+                              title="CardCrush Demo">Live View</a>.
                         <div class="tags">
                            <span class="tag nextjs">Next.js</span>
                            <span class="tag react">React.js</span>
@@ -692,5 +692,4 @@
          }
       </script>
 </body>
-
 </html>
