added contact form, links to longer project descriptions

--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
                      <div class="portfolio-info">
                         <h4>CardCrush</h4>
                         <p>AI flashcard generator that allows users to easily create, save, and view generated
-                           flashcards. Subscription based software. <a href="https://cardcrush.bbabiker.com"
-                              title="CardCrush Demo">Live View</a>.
+                           flashcards. Subscription based software. <br><a href="/projects/cardcrush.html"
+                              title="CardCrush Page">Learn More Here</a>.
                         <div class="tags">
                            <span class="tag nextjs">Next.js</span>
                            <span class="tag react">React.js</span>
@@ -182,10 +182,6 @@
                         </div>
                         <br>Last Updated: <span class="project" data-repo="CardCrush">Loading...</span>
                         </p>
-                        <a href="https://github.com/BabikerBabiker/CardCrush" title="CardCrush Repository"
-                           class="details-link">
-                           <i class="bi bi-link-45deg"></i>
-                        </a>
                      </div>
                   </div>
                   <!-- End Portfolio Item -->
@@ -195,8 +191,7 @@
                      <div class="portfolio-info">
                         <h4>IceMan</h4>
                         <p>Interactive game using OpenGL that allows user to mine ice, find oil, and escape protestors
-                           as its main objectives. <a href="https://youtu.be/5oswDgrJkNk" title="Iceman Demo">Live
-                              Demo</a>
+                           as its main objectives. <br><a href="projects/iceman.html" title="Iceman Page">Learn More Here</a>
                         <div class="tags">
                            <span class="tag cplusplus">C++</span>
                            <span class="tag opengl">OpenGL</span>
@@ -204,12 +199,8 @@
                            <span class="tag github">GitHub</span>
                            <span class="tag visual-studio-2022">Visual Studio 2022</span>
                         </div>
-                        <br>Last Updated: <span class="project" data-repo="IceMan-Project">Loading...</span>
+                        <br>Last Updated: <span class="project" data-repo="IceMan">Loading...</span>
                         </p>
-                        <a href="https://github.com/BabikerBabiker/IceMan-Project" title="IceMan Repository"
-                           class="details-link">
-                           <i class="bi bi-link-45deg"></i>
-                        </a>
                      </div>
                   </div>
                   <!-- End Portfolio Item -->
@@ -596,30 +587,20 @@
                <p>Contact Me Below</p>
             </div>
             <div class="contact-form-container" data-aos="fade-up" data-aos-delay="400">
-               <form action="https://formspree.io/f/xwpevdoz" method="POST" role="form" class="php-email-form">
-                  <input type="hidden" name="_next" value="">
-                  <div class="row">
-                     <div class="col form-group">
-                        <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
-                     </div>
-                     <div class="col form-group">
-                        <input type="email" class="form-control" name="email" id="email" placeholder="Your Email"
-                           required>
-                     </div>
-                  </div>
-                  <div class="form-group mt-3">
-                     <textarea class="form-control message-box" name="message" rows="5" placeholder="Message" required
-                        style="height: 184px;"></textarea>
-                  </div>
-                  <div class="my-3">
-                     <div class="loading">Loading</div>
-                     <div class="error-message"></div>
-                     <div class="sent-message">Your message has been sent. Thank you!</div>
-                  </div>
-                  <div class="text-center">
-                     <button type="submit" class="btn-common">Send Message</button>
-                  </div>
-               </form>
+               <div class="quick-links">
+               <a href="/contact.html" class="link-item">
+                  <i class="bi bi-file-earmark-text"></i>
+                  <span>Contact Form</span>
+               </a>
+               <a href="mailto:mail@bbabiker.com" class="link-item">
+                  <i class="bi bi-file-earmark-text"></i>
+                  <span>Email</span>
+               </a>
+               <a href="/linkedin.html" class="link-item">
+                  <i class="bi bi-file-earmark-text"></i>
+                  <span>LinkedIn</span>
+               </a>
+            </div>
             </div>
          </div>
       </section>
