updated contact page

--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/assets/css/main.css" />
     <title>Contact Form</title>
     <style>
       * {
@@ -20,6 +21,11 @@
         background-color: #f4f4f4;
         padding: 20px;
         flex-direction: column;
+        background-image: url('assets/img/texture.jpg');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+
       }
 
       .go-back-btn {
