--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                      <div class="portfolio-info">
                         <h4>FinanceFirst</h4>
                         <p>Banking app which allows for deposits, withdraws, and transferring of money. Uses an SQLite 3
-                           database to effectively & securely store data.
+                           database to effectively & securely store data. <br><a href="projects/financefirst.html" title="Iceman Page">Learn More Here</a>
                         <div class="tags">
                            <span class="tag cplusplus">C++</span>
                            <span class="tag sqlite">SQLite 3</span>
@@ -221,10 +221,6 @@
                         </div>
                         <br>Last Updated: <span class="project" data-repo="FinanceFirst">Loading...</span>
                         </p>
-                        <a href="https://github.com/BabikerBabiker/FinanceFirst" title="FinanceFirst Repository"
-                           class="details-link">
-                           <i class="bi bi-link-45deg"></i>
-                        </a>
                      </div>
                   </div>
                   <!-- End Portfolio Item -->
