--- a/projects/iceman.html
+++ b/projects/iceman.html
@@ -9,197 +9,11 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css"
     />
-    <style>
-      body {
-        font-family: "Arial", sans-serif;
-        background-color: #f8f9fa;
-        margin: 0;
-        padding: 0;
-      }
-      p b {
-        color: #333;
-      }
-
-      p u {
-        text-decoration: none;
-        position: relative;
-      }
-
-      p u::after {
-        content: "";
-        position: absolute;
-        left: 0;
-        bottom: -3px;
-        width: 100%;
-        height: 2px;
-        background-color: #333;
-      }
-
-      .container {
-        max-width: 50%;
-        margin: 50px auto;
-        padding: 30px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        border-radius: 8px;
-        background-color: #fff;
-      }
-
-      .project-info h4 {
-        font-size: 24px;
-        margin-bottom: 15px;
-        color: #333;
-      }
-
-      .project-video iframe {
-        width: 100%;
-        height: 500px;
-        border-radius: 8px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      }
-
-      p {
-        font-size: 16px;
-        line-height: 1.6;
-        margin-top: 15px;
-        color: #555;
-      }
-
-      .go-back-btn {
-        position: relative;
-        top: 30px;
-        left: 358px;
-        background-color: #087cfc;
-        color: #fff;
-        border: none;
-        border-radius: 5px;
-        padding: 8px 15px;
-        font-size: 20px;
-        cursor: pointer;
-        text-decoration: none;
-        box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
-        transition: background-color 0.3s, transform 0.3s;
-      }
-
-      .go-back-btn:hover {
-        background-color: #333;
-        color: #fff;
-        transform: scale(1.05);
-      }
-
-      .links {
-        margin-top: 20px;
-        display: flex;
-        justify-content: left;
-        flex-wrap: wrap;
-        gap: 10px;
-      }
-
-      .link {
-        display: inline-block;
-        padding: 8px 15px;
-        border-radius: 5px;
-        color: #fff;
-        text-decoration: none;
-        font-size: 14px;
-        background-color: #007bff;
-        transition: background-color 0.3s, transform 0.3s;
-      }
-
-      .link.disabled {
-        background-color: #6c757d;
-        cursor: not-allowed;
-        pointer-events: none;
-        color: #fff;
-        text-decoration: none;
-      }
-
-      .link:hover {
-        background-color: #0056b3;
-        color: #fff;
-        transform: scale(1.05);
-      }
-
-      .link.repo {
-        background-color: #333;
-      }
-
-      .link.repo:hover {
-        background-color: #222;
-      }
-
-      .link.repo.disabled {
-        background-color: #6c757d;
-      }
-
-      .link.website {
-        background-color: #28a745;
-      }
-
-      .link.website:hover {
-        background-color: #1e7e34;
-      }
-
-      .link.website.disabled {
-        background-color: #6c757d;
-      }
-
-      .link.demo {
-        background-color: #dc3545;
-      }
-
-      .link.demo:hover {
-        background-color: #c82333;
-      }
-
-      .link.demo.disabled {
-        background-color: #6c757d;
-      }
-
-      @media (max-width: 576px) {
-        .project-info h4 {
-          font-size: 20px;
-        }
-
-        .project-video iframe {
-          height: 150px;
-        }
-
-        p {
-          font-size: 14px;
-        }
-
-        .go-back-btn {
-          top: 30px;
-          left: 20px;
-          font-size: 20px;
-          padding: 6px 12px;
-        }
-
-        .links {
-          flex-direction: row;
-          align-items: center;
-          overflow-x: visible;
-          justify-content: center;
-        }
-
-        .link {
-          margin: 5px 0;
-        }
-
-        .container {
-          max-width: 90%;
-          margin: 50px auto;
-          padding: 15px;
-          box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-          border-radius: 8px;
-          background-color: #fff;
-        }
-      }
-    </style>
+    <link rel="stylesheet" href="../assets/css/project.css" />
   </head>
 
   <body>
-    <a href="../index.html" class="go-back-btn">Go Back</a>
+    <a href="../index.html" class="go-back-btn">Home</a>
 
     <div class="container">
       <div class="project-info">
