--- a/index.html
+++ b/index.html
@@ -127,10 +127,6 @@
                         <i class="bi bi-github"></i>
                         <span>GitHub</span>
                      </a>
-                     <a href="https://bbabiker.com/resume" class="link-item">
-                        <i class="bi bi-file-earmark-text"></i>
-                        <span>Resume</span>
-                     </a>
                   </div>
                   <br>
                </div>
@@ -157,6 +153,7 @@
                   <li data-filter=".filter-python">Python</li>
                   <li data-filter=".filter-ai">AI</li>
                   <li data-filter=".filter-web">Web Dev</li>
+                  <li data-filter=".filter-app">App Dev</li>
                   <li data-filter=".filter-db">Database</li>
                   <li data-filter=".filter-gui">GUI</li>
                   <li data-filter=".filter-cli">CLI</li>
@@ -200,6 +197,23 @@
                            <span class="tag visual-studio-2022">Visual Studio 2022</span>
                         </div>
                         <br>Last Updated: <span class="project" data-repo="IceMan">Loading...</span>
+                        </p>
+                     </div>
+                  </div>
+                  <!-- End Portfolio Item -->
+                  <!-- Portfolio Item -->
+                  <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app filter-gui filter-latest">
+                     <img src="assets/img/taskflow.jpg" class="img-fluid project-image" alt="TaskFlow">
+                     <div class="portfolio-info">
+                        <h4>TaskFlow</h4>
+                        <p>Task manager app developed to handle complex tasks and reminders throughout a users typical day. <br><a href="projects/taskflow.html" title="TaskFlow Page">Learn More Here</a>
+                        <div class="tags">
+                           <span class="tag react-native">React Native</span>
+                           <span class="tag typescript">TypeScript</span>
+                           <span class="tag expo">Expo</span><br>
+                           <span class="tag github">GitHub</span>
+                        </div>
+                        <br>Last Updated: <span class="project" data-repo="TaskFlow">Loading...</span>
                         </p>
                      </div>
                   </div>
